--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.17.1",
     "d3-scale": "^1.0.7",
     "lodash.foreach": "^4.5.0",
+    "lodash.get": "^4.4.2",
     "lodash.isarray": "^4.0.0",
     "lodash.keys": "^4.2.0",
     "prop-types": "^15.6.0",
