--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,39 @@
 {
-    "presets": ["react"]
+	"presets": [
+		"react",
+		"stage-2"
+	],
+	"plugins": [
+		"transform-flow-strip-types"
+	],
+	"env": {
+		"cjs": {
+			"presets": [["env"]]
+		},
+		"es": {
+			"presets": [
+				["env", { "modules": false  }], "react", "stage-2"
+			]
+		},
+		"watch": {
+			"presets": [
+				["env", {
+					"targets": {
+						"chrome": 59
+					},
+					"modules": false
+				}]
+			]
+		},
+		"server": {
+			"presets": [
+				["env", {
+					"targets": {
+						"node": 7.5
+					},
+					"loose": true
+				}]
+			]
+		}
+	}
 }
