--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-multiview",
-  "version": "0.7.0-beta.22",
+  "version": "1.0.0",
   "description": "React multiview",
   "main": "src/index.js",
   "module": "src/index.js",
