--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "rt-treeview": "^0.1.1",
     "save-svg-as-png": "^1.2.0"
   },
   "peerDependencies": {
