--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "d3-time": "^1.0.8",
     "d3-time-format": "^2.1.1",
     "debug": "^3.1.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.flattendeep": "^4.4.0",
     "lodash.foreach": "^4.5.0",
     "lodash.get": "^4.4.2",
@@ -64,6 +65,7 @@
     "lodash.keys": "^4.2.0",
     "lodash.set": "^4.3.2",
     "lodash.sortby": "^4.7.0",
+    "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "lodash.uniqueid": "^4.0.1",
     "prop-types": "^15.6.0",
