--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "classnames": "^2.2.6",
     "d3-array": "^1.2.1",
     "d3-collection": "^1.0.4",
     "d3-color": "^1.0.3",
@@ -56,6 +57,8 @@
     "d3-time": "^1.0.8",
     "d3-time-format": "^2.1.1",
     "debug": "^3.1.0",
+    "event-source-polyfill": "0.0.12",
+    "eventsource": "^1.0.5",
     "lodash.debounce": "^4.0.8",
     "lodash.flattendeep": "^4.4.0",
     "lodash.foreach": "^4.5.0",
@@ -70,6 +73,7 @@
     "lodash.uniqueid": "^4.0.1",
     "prop-types": "^15.6.0",
     "randomcolor": "^0.5.3",
+    "react-eventsource": "^1.1.0",
     "react-redux": "^5.0.6",
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.2",
@@ -104,6 +108,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
@@ -111,11 +116,14 @@
     "modernizr": "^3.5.0",
     "ncp": "^2.0.0",
     "node-sass": "^4.7.2",
+    "postcss": "^7.0.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-each": "^0.10.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.10",
     "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-nesting": "^6.0.0",
     "prismjs": "^1.8.4",
     "progress-bar-webpack-plugin": "^1.10.0",
     "react": "^16.1.1",
@@ -126,6 +134,7 @@
     "sass-loader": "^6.0.6",
     "shelljs": "^0.7.8",
     "style-loader": "^0.19.0",
+    "stylelint-config-recommended": "^2.1.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-config-utils": "^2.3.0",
