--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "canvasjs": "^1.8.1",
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
     "d3-array": "^1.2.1",
     "d3-collection": "^1.0.4",
@@ -73,6 +75,7 @@
     "lodash.uniqueid": "^4.0.1",
     "prop-types": "^15.6.0",
     "randomcolor": "^0.5.3",
+    "react-chartjs-2": "^2.7.4",
     "react-eventsource": "^1.1.0",
     "react-redux": "^5.0.6",
     "react-toolbox": "^2.0.0-beta.12",
